// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas GifExpertApp Debe mostrar una lista de categorias 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    agregarPapu={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="One Punch"
      key="0"
    />
    <GifGrid
      category="Dragon Ball"
      key="1"
    />
  </ol>
</Fragment>
`;

exports[`Pruebas GifExpertApp Que se cargue correctamente 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    agregarPapu={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Berserk"
      key="0"
    />
  </ol>
</Fragment>
`;
